removing useless code in pom.xml
MaxPermSize does not have a meaning anymore in Java8, and we don't need
cargo to deploy several webapps in the same jetty instance.