@@ -191,65 +191,7 @@
         </plugin>
       </plugins>
     </pluginManagement>
-
     <plugins>
-<!--      <plugin>
-          <groupId>org.codehaus.groovy.maven</groupId>
-          <artifactId>gmaven-plugin</artifactId>
-          <version>1.0</version>
-          <executions>
-              <execution>
-                  <id>Check memory settings</id>
-                  <goals>
-                      <goal>execute</goal>
-                  </goals>
-                  <phase>initialize</phase>
-                  <configuration>
-                      <source><![CDATA[
-                          def converters = [
-                                  "k": 1/10124,
-                                  "m": 1.0,
-                                  "g": 1024.0
-                          ]
-                          def parseInt = {value ->
-                              def intVal = Integer.parseInt(value.substring(0, value.length() - 1));
-                              def unit = value.substring(value.length() - 1).toLowerCase()
-                              def converter = converters[unit]
-                              if (converter == null) {
-                                  throw new AssertionError("unit: $unit is not a recognized unit.  One of k,m,g is required in : $value")
-                              }
-                              return intVal * converter
-                          }
-
-                          final String MAX_PREFIX = "-Xmx"
-                          final String PERMGEN_PREFIX = "-XX:MaxPermSize="
-                          def arguments = java.lang.management.ManagementFactory.getRuntimeMXBean().getInputArguments()
-                          def mx = -1;
-                          def permgen = -1;
-                          arguments.each{param ->
-                              if (param.startsWith(MAX_PREFIX)) {
-                                  mx = parseInt (param.substring(MAX_PREFIX.length()))
-                              } else if (param.startsWith(PERMGEN_PREFIX)) {
-                                  permgen = parseInt (param.substring(PERMGEN_PREFIX.length()))
-                              }
-                          }
-
-                          log.info("\n\tMax Heap Memory: "+mx+" MB\n\tMax PermGen Size: "+permgen+" MB")
-                          if (permgen < 0 || mx < 0) {
-                              def mavenOpts = "MAVEN_OPTS=\"${MAX_PREFIX}512M ${PERMGEN_PREFIX}256M\""
-                              def errorMsg = "\n\nIn order for the build to complete both the $MAX_PREFIX parameter and the "+
-                                      "$PERMGEN_PREFIX must be set.  The e2e tests require this because the start Geonetwork and run " +
-                                      "tests against it which takes a lot of memory.\n\nCmd/Powershell:"+
-                                      "\n\n\t \$Env:${mavenOpts}\n\nBash/SH:\n\n\texport ${mavenOpts}"
-                              log.error(errorMsg);
-                              throw new AssertionError(errorMsg);
-                          }
-                          ]]></source>
-                  </configuration>
-              </execution>
-          </executions>
-      </plugin>-->
-      <!--     Compilation.                                        -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -292,8 +234,7 @@
           <configuration>
             <home>${project.build.directory}/test-server</home>
             <properties>
-              <!-- Cargo VMARGS are not working. FIXME -->
-              <cargo.jvmargs>-Xms48m -Xmx512m -Xss2M -XX:MaxPermSize=128m</cargo.jvmargs>
+              <cargo.jvmargs>-Xms48m -Xmx512m -Xss2M</cargo.jvmargs>
               <cargo.servlet.port>8080</cargo.servlet.port>
             </properties>
             <deployables>
@@ -333,7 +274,7 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.18.1</version>
             <configuration>
-                <argLine>-Dfile.encoding=UTF-8  -Xmx512M -XX:MaxPermSize=256M</argLine>
+                <argLine>-Dfile.encoding=UTF-8  -Xmx2048M</argLine>
                 <!--<rerunFailingTestsCount>5</rerunFailingTestsCount>-->
                 <runOrder>alphabetical</runOrder>
                 <redirectTestOutputToFile>true</redirectTestOutputToFile>
